# python-aws-dynamodb-parallel-scan

./: .gitignore  LICENSE  Makefile  README.md  aws_dynamodb_parallel_scan.py  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json
.github/workflows/: python_ci.yaml
src/aws_dynamodb_parallel_scan/: __init__.py
tests/: conftest.py  test_aws_dynamodb_parallel_scan.py  test_integration.py  utils.py
