[tool.poetry]
name = "aws-dynamodb-parallel-scan"
version = "1.0.0"
description = "Amazon DynamoDB Parallel Scan Paginator for boto3."
authors = ["Sami Jaktholm <sjakthol@outlook.com>"]
license = "MIT"
packages = [
  {include = "aws_dynamodb_parallel_scan.py"},
  {include = "py.typed"}
]
readme = 'README.md'
repository = "https://github.com/sjakthol/python-aws-dynamodb-parallel-scan"

[tool.poetry.scripts]
aws-dynamodb-parallel-scan = 'aws_dynamodb_parallel_scan:cli'


[tool.poetry.dependencies]
boto3 = "^1.28"
python = ">=3.8,<4.0.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.8"
black = "^24.3.0"
boto3-stubs = {extras = ["dynamodb"], version = "^1.34"}
more-itertools = "^10.2.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^4.1"
moto = {extras = ["dynamodb2"], version = "^5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
