[project]
name = "aws-dynamodb-parallel-scan"
version = "1.1.0"
description = "Amazon DynamoDB Parallel Scan Paginator for boto3."
readme = "README.md"
authors = [
    { name = "Sami Jaktholm", email = "sjakthol@outlook.com" }
]
requires-python = ">=3.8"
dependencies = [
  "boto3"
]

[project.scripts]
aws-dynamodb-parallel-scan = 'aws_dynamodb_parallel_scan:cli'

[tool.uv]
dev-dependencies = [
  "bandit",
  "boto3-stubs[dynamodb]",
  "more-itertools",
  "moto[dynamodb]",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]