[project]
name = "aws-dynamodb-parallel-scan"
version = "1.2.0"
description = "Amazon DynamoDB Parallel Scan Paginator for boto3."
readme = "README.md"
authors = [
    { name = "Sami Jaktholm", email = "sjakthol@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
  "boto3"
]

[project.scripts]
aws-dynamodb-parallel-scan = 'aws_dynamodb_parallel_scan:cli'

[dependency-groups]
dev = [
  "bandit",
  "boto3-stubs[dynamodb]",
  "more-itertools",
  "moto[dynamodb]",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]
